Attempt to fix a resize of the background of section 1 on mobile devices

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -57,7 +57,6 @@ section {
 #section1 {
     background-image: url("../images/index/section1.jpg");
     background-blend-mode: multiply;
-    position: relative;
 }
 
 .centered {
